[gd_scene load_steps=10 format=2]

[ext_resource path="res://material_maker/windows/node_editor/node_editor.tscn" type="PackedScene" id=1]
[ext_resource path="res://material_maker/windows/material_editor/material_editor.gd" type="Script" id=2]
[ext_resource path="res://material_maker/icons/icons.tres" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://material_maker/fonts/hack.ttf"

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 160, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[node name="MaterialEditor" instance=ExtResource( 1 )]
window_title = "Material Editor"
script = ExtResource( 2 )

[node name="LabelOutputs" parent="Sizer/Tabs/Outputs" index="0"]
margin_right = 942.0

[node name="Outputs" parent="Sizer/Tabs/Outputs" index="1"]
margin_right = 942.0
margin_bottom = 414.0

[node name="Sizer" parent="Sizer/Tabs/Outputs/Outputs" index="0"]
margin_right = 942.0

[node name="Preview" type="TextEdit" parent="Sizer/Tabs" index="5"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = true
show_line_numbers = true
__meta__ = {
"_editor_description_": ""
}

[node name="Export" type="VBoxContainer" parent="Sizer/Tabs" index="6"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Export" type="HBoxContainer" parent="Sizer/Tabs/Export" index="0"]
margin_right = 942.0
margin_bottom = 24.0

[node name="Create" type="Button" parent="Sizer/Tabs/Export/Export" index="0"]
margin_right = 28.0
margin_bottom = 24.0
icon = SubResource( 3 )

[node name="Label" type="Label" parent="Sizer/Tabs/Export/Export" index="1"]
margin_left = 32.0
margin_top = 5.0
margin_right = 117.0
margin_bottom = 19.0
text = "Export target:"

[node name="Option" type="OptionButton" parent="Sizer/Tabs/Export/Export" index="2"]
margin_left = 121.0
margin_top = 2.0
margin_right = 271.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 4

[node name="Rename" type="Button" parent="Sizer/Tabs/Export/Export" index="3"]
margin_left = 275.0
margin_right = 303.0
margin_bottom = 24.0
icon = SubResource( 4 )

[node name="Duplicate" type="Button" parent="Sizer/Tabs/Export/Export" index="4"]
margin_left = 275.0
margin_right = 303.0
margin_bottom = 24.0
icon = SubResource( 5 )

[node name="Delete" type="Button" parent="Sizer/Tabs/Export/Export" index="5"]
margin_left = 307.0
margin_right = 335.0
margin_bottom = 24.0
icon = SubResource( 6 )

[node name="Space" type="Control" parent="Sizer/Tabs/Export/Export" index="6"]
margin_left = 339.0
margin_right = 359.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )

[node name="ExtensionLabel" type="Label" parent="Sizer/Tabs/Export/Export" index="7"]
margin_left = 363.0
margin_top = 5.0
margin_right = 429.0
margin_bottom = 19.0
text = "Extension:"

[node name="ExtensionEdit" type="LineEdit" parent="Sizer/Tabs/Export/Export" index="8"]
margin_left = 433.0
margin_right = 491.0
margin_bottom = 24.0
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="Sizer/Tabs/Export" index="1"]
margin_top = 28.0
margin_right = 942.0
margin_bottom = 32.0

[node name="Edit" type="HBoxContainer" parent="Sizer/Tabs/Export" index="2"]
margin_top = 36.0
margin_right = 942.0
margin_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Files" type="ItemList" parent="Sizer/Tabs/Export/Edit" index="0"]
margin_right = 200.0
margin_bottom = 354.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3

[node name="File" type="VBoxContainer" parent="Sizer/Tabs/Export/Edit" index="1"]
margin_left = 204.0
margin_right = 942.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Common" type="GridContainer" parent="Sizer/Tabs/Export/Edit/File" index="0"]
margin_right = 738.0
margin_bottom = 104.0
columns = 2

[node name="LabelName" type="Label" parent="Sizer/Tabs/Export/Edit/File/Common" index="0"]
margin_top = 5.0
margin_right = 65.0
margin_bottom = 19.0
text = "Name:"

[node name="name" type="LineEdit" parent="Sizer/Tabs/Export/Edit/File/Common" index="1"]
margin_left = 69.0
margin_right = 738.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="LabelCondition" type="Label" parent="Sizer/Tabs/Export/Edit/File/Common" index="2"]
margin_top = 33.0
margin_right = 65.0
margin_bottom = 47.0
text = "Condition:"

[node name="conditions" type="LineEdit" parent="Sizer/Tabs/Export/Edit/File/Common" index="3"]
margin_left = 69.0
margin_top = 28.0
margin_right = 738.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="LabelType" type="Label" parent="Sizer/Tabs/Export/Edit/File/Common" index="4"]
margin_top = 59.0
margin_right = 65.0
margin_bottom = 73.0
text = "Type:"

[node name="type" type="OptionButton" parent="Sizer/Tabs/Export/Edit/File/Common" index="5"]
margin_left = 69.0
margin_top = 56.0
margin_right = 738.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Texture"
items = [ "Texture", null, false, 0, null, "Template", null, false, 1, null, "Buffers", null, false, 2, null, "Buffer templates", null, false, 3, null ]
selected = 0

[node name="LabelOutput" type="Label" parent="Sizer/Tabs/Export/Edit/File/Common" index="6"]
margin_top = 85.0
margin_right = 65.0
margin_bottom = 99.0
text = "Output:"

[node name="output" type="SpinBox" parent="Sizer/Tabs/Export/Edit/File/Common" index="7"]
margin_left = 69.0
margin_top = 80.0
margin_right = 738.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="template" type="TextEdit" parent="Sizer/Tabs/Export/Edit/File" index="1"]
margin_top = 108.0
margin_right = 738.0
margin_bottom = 354.0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
syntax_highlighting = true
show_line_numbers = true
__meta__ = {
"_editor_description_": ""
}

[node name="Custom" type="TextEdit" parent="Sizer/Tabs" index="7"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
mouse_default_cursor_shape = 0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = true
show_line_numbers = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="Sizer/Tabs/Export/Export/Create" to="." method="_on_Create_Export_pressed"]
[connection signal="item_selected" from="Sizer/Tabs/Export/Export/Option" to="." method="select_export"]
[connection signal="pressed" from="Sizer/Tabs/Export/Export/Rename" to="." method="_on_Rename_Export_pressed"]
[connection signal="pressed" from="Sizer/Tabs/Export/Export/Duplicate" to="." method="_on_Duplicate_Export_pressed"]
[connection signal="pressed" from="Sizer/Tabs/Export/Export/Delete" to="." method="_on_Delete_Export_pressed"]
[connection signal="focus_exited" from="Sizer/Tabs/Export/Export/ExtensionEdit" to="." method="_on_ExportExtensionEdit_focus_exited"]
[connection signal="text_entered" from="Sizer/Tabs/Export/Export/ExtensionEdit" to="." method="_on_ExportExtensionEdit_text_entered"]
[connection signal="item_selected" from="Sizer/Tabs/Export/Edit/Files" to="." method="select_file"]
[connection signal="focus_exited" from="Sizer/Tabs/Export/Edit/File/Common/name" to="." method="_on_name_focus_exited"]
[connection signal="text_entered" from="Sizer/Tabs/Export/Edit/File/Common/name" to="." method="_on_name_text_entered"]
[connection signal="text_entered" from="Sizer/Tabs/Export/Edit/File/Common/conditions" to="." method="_on_conditions_text_entered"]
[connection signal="item_selected" from="Sizer/Tabs/Export/Edit/File/Common/type" to="." method="_on_type_item_selected"]
[connection signal="value_changed" from="Sizer/Tabs/Export/Edit/File/Common/output" to="." method="_on_output_value_changed"]
[connection signal="focus_exited" from="Sizer/Tabs/Export/Edit/File/template" to="." method="_on_template_focus_exited"]
